Sun Oct  9 14:14:01 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/IFR_Service/IFR_Service.mpc:

	  Removed includes definitions pointing to $(TAO_ROOT) and
	  $(TAO_ROOT)/orbsvcs/IFR_Service.  These are already
	  obtained from the base projects we derive from.

	  Set TAO_IDL_INCLUDE_DIR to $(includedir)/tao for automake
	  builds so end-user's won't have to set ACE_ROOT/TAO_ROOT
	  to run the installed executable.

Sun Oct  9 08:16:17 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/examples/RtEC/Kokyu/RtECKokyu.mpc:
	* orbsvcs/orbsvcs/FtRtEvent.mpc:

	  Removed includes definitions pointing to directories under
	  $(TAO_ROOT)/orbsvcs.  This appears no longer to be needed,
	  all headers are specified relative to $(TAO_ROOT)/orbsvcs.

Sat Oct  8 18:43:12 UTC 2005  Johnny Willemsen  <jwillemsen@remedy.nl>

        * tests/Codec/client.cpp:
        * tests/Codec/test.idl:
          Added a wstring to the struct we encode/decode, this fails at
          this moment, working on a fix, but this at least demonstrates
          the problem

Sat Oct  8 08:18:29 2005  J.T. Conklin  <jtc@acorntoolworks.com>

	* orbsvcs/Logging_Service/Basic_Logging_Service/Basic_Logging_Service.mpc:
	* orbsvcs/Logging_Service/Event_Logging_Service/Event_Logging_Service.mpc:
	* orbsvcs/Logging_Service/Notify_Logging_Service/Notify_Logging_Service.mpc:
	* orbsvcs/performance-tests/RTEvent/Colocated_Roundtrip/Colocated_Roundtrip.mpc:
	* orbsvcs/performance-tests/RTEvent/Federated_Roundtrip/Federated_Roundtrip.mpc:
	* orbsvcs/performance-tests/RTEvent/RTCORBA_Baseline/RTCORBA_Baseline.mpc:
	* orbsvcs/performance-tests/RTEvent/RTCORBA_Callback/RTCORBA_Callback.mpc:
	* orbsvcs/performance-tests/RTEvent/Roundtrip/Roundtrip.mpc:
	* orbsvcs/performance-tests/RTEvent/TCP_Baseline/TCP_Baseline.mpc:
	* orbsvcs/tests/LoadBalancing/GenericFactory/Infrastructure_Controlled/Infrastructure_Controlled.mpc:
	* orbsvcs/tests/LoadBalancing/LoadMonitor/CPU/LoadMonitorCPU.mpc:
